--- a/docker-multiarch-merge/action.yml
+++ b/docker-multiarch-merge/action.yml
@@ -9,62 +9,64 @@ inputs:
     required: true
   password:
     required: true
-
   image:
     required: true
     description: "Image ref WITHOUT tag. Example: docker.io/user/app"
   tag:
     required: true
     description: "Single tag to publish"
-
   artifact_prefix:
     required: false
     default: digests
   digests_path:
     required: false
     default: /tmp/digests
+  description_file:
+    required: false
+    default: README.md
+    description: "Path to description file for DockerHub (e.g., README.md, docs/README.md). Skips update if not found."
 
 runs:
   using: composite
   steps:
-    - uses: docker/setup-buildx-action@v3
-
-    - uses: docker/login-action@v3
+    - 
+      name: Setup Buildx
+      uses: docker/setup-buildx-action@v3
+    - 
+      name: Docker login
+      uses: docker/login-action@v3
       with:
         registry: ${{ inputs.registry }}
         username: ${{ inputs.username }}
         password: ${{ inputs.password }}
-
-    - name: Download digest artifacts
+    - 
+      name: Download digest artifacts
       uses: actions/download-artifact@v4
       with:
         # v4 supports pattern + merge-multiple to download many artifacts into one directory  [oai_citation:5‡The GitHub Blog](https://github.blog/changelog/2023-12-14-github-actions-artifacts-v4-is-now-generally-available/?utm_source=chatgpt.com)
         pattern: ${{ inputs.artifact_prefix }}-${{ inputs.tag }}-*
         path: ${{ inputs.digests_path }}
         merge-multiple: true
-
-    - name: Create and push manifest list
+    -
+      name: Checkout
+      uses: actions/checkout@v4
+    -
+      name: Set GitHub Path
+      run: echo "${{ github.action_path }}" >> $GITHUB_PATH
       shell: bash
-      run: |
-        set -euo pipefail
-
-        IMAGE="${{ inputs.image }}"
-        TAG="${{ inputs.tag }}"
-        DIG="${{ inputs.digests_path }}"
-
-        shopt -s nullglob
-        files=("$DIG"/*.digest)
-        if [[ ${#files[@]} -eq 0 ]]; then
-          echo "ERROR: no digest files found in $DIG" >&2
-          exit 1
-        fi
-
-        IMAGES=""
-        for f in "${files[@]}"; do
-          d="$(cat "$f")"
-          IMAGES="$IMAGES ${IMAGE}@${d}"
-        done
-
-        # imagetools creates a manifest list from manifests that already exist in registry  [oai_citation:6‡Docker Documentation](https://docs.docker.com/reference/cli/docker/buildx/imagetools/create/?utm_source=chatgpt.com)
-        docker buildx imagetools create -t "${IMAGE}:${TAG}" ${IMAGES}
-        docker buildx imagetools inspect "${IMAGE}:${TAG}"
+    -
+      name: Create and push manifest list
+      run: create-manifest.sh
+      shell: bash
+      env:
+        INPUT_IMAGE: ${{ inputs.image }}
+        INPUT_TAG: ${{ inputs.tag }}
+        INPUT_DIGESTS_PATH: ${{ inputs.digests_path }}
+    -
+      name: Update docker description
+      uses: hieupth/docker-actions/docker-description@main
+      with:
+        username: ${{ inputs.username }}
+        password: ${{ inputs.password }}
+        repository: ${{ inputs.image }}
+        description_file: ${{ inputs.description_file }}
